azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "storageAccount_name": {
            "defaultValue": "hackazon001",
            "type": "string"
        },
        "virtualMachine_name": {
            "defaultValue": "Hackazon-Debian9",
            "type": "string"
        },
        "networkSecurityGroups_SG_SSHandWeb_name": {
            "defaultValue": "SG-SSHandWeb",
            "type": "string"
        },
        "networkInterfaces_hackazon_debian9775_name": {
            "defaultValue": "hackazon-debian9775",
            "type": "string"
        },
        "publicIPAddresses_Hackazon_Debian9_ip_name": {
            "defaultValue": "Hackazon-Debian9-ip",
            "type": "string"
        },
        "virtualNetworks_Collins_Hackazon_vnet_name": {
            "defaultValue": "Collins-Hackazon-vnet",
            "type": "string"
        },
        "securityRules_HTTP_name": {
            "defaultValue": "HTTP",
            "type": "string"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "string"
        },
        "securityRules_HTTPS_name": {
            "defaultValue": "HTTPS",
            "type": "string"
        },
        "securityRules_default_allow_ssh_name": {
            "defaultValue": "default-allow-ssh",
            "type": "string"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/0e1a8817-dcd6-4ca8-9017-2fbda46c2be7/resourceGroups/Collins-Hackazon/providers/Microsoft.Compute/virtualMachines/Hackazon-Debian9'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachine_name')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "credativ",
                        "offer": "Debian",
                        "sku": "9",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[parameters('virtualMachine_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccount_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachine_name'),'20180411112953.vhd'))]"
                        },
                        "caching": "ReadWrite",
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachine_name')]",
                    "adminUsername": "localadmin",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_hackazon_debian9775_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccount_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_hackazon_debian9775_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0e1a8817-dcd6-4ca8-9017-2fbda46c2be7/resourceGroups/Collins-Hackazon/providers/Microsoft.Network/networkInterfaces/hackazon-debian9775'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_hackazon_debian9775_name')]",
            "apiVersion": "2018-01-01",
            "location": "[resourceGroup().location]",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "a1d24620-9f3d-4ac6-8fdf-09460328ce14",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"0b730177-f8e1-4523-84b7-4574da3b7bef\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.4.3.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Hackazon_Debian9_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Collins_Hackazon_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_SG_SSHandWeb_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachine_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Hackazon_Debian9_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Collins_Hackazon_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_SG_SSHandWeb_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachine_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0e1a8817-dcd6-4ca8-9017-2fbda46c2be7/resourceGroups/Collins-Hackazon/providers/Microsoft.Network/networkSecurityGroups/SG-SSHandWeb'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_SG_SSHandWeb_name')]",
            "apiVersion": "2018-01-01",
            "location": "[resourceGroup().location]",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "8408a18e-ddf7-4575-9cec-c439a806f498",
                "securityRules": [
                    {
                        "name": "HTTP",
                        "etag": "W/\"63a2fa8a-aad2-4b3c-bb60-d3467d7200d2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTPS",
                        "etag": "W/\"63a2fa8a-aad2-4b3c-bb60-d3467d7200d2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "default-allow-ssh",
                        "etag": "W/\"63a2fa8a-aad2-4b3c-bb60-d3467d7200d2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"63a2fa8a-aad2-4b3c-bb60-d3467d7200d2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"63a2fa8a-aad2-4b3c-bb60-d3467d7200d2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"63a2fa8a-aad2-4b3c-bb60-d3467d7200d2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"63a2fa8a-aad2-4b3c-bb60-d3467d7200d2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"63a2fa8a-aad2-4b3c-bb60-d3467d7200d2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"63a2fa8a-aad2-4b3c-bb60-d3467d7200d2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0e1a8817-dcd6-4ca8-9017-2fbda46c2be7/resourceGroups/Collins-Hackazon/providers/Microsoft.Network/publicIPAddresses/Hackazon-Debian9-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_Hackazon_Debian9_ip_name')]",
            "apiVersion": "2018-01-01",
            "location": "[resourceGroup().location]",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "1762ad75-58ee-4645-bfc2-1d65007db739",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0e1a8817-dcd6-4ca8-9017-2fbda46c2be7/resourceGroups/Collins-Hackazon/providers/Microsoft.Network/virtualNetworks/Collins-Hackazon-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_Collins_Hackazon_vnet_name')]",
            "apiVersion": "2018-01-01",
            "location": "[resourceGroup().location]",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "30f2f20b-4d7f-4a63-818f-5fbbc60c7fa0",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.4.3.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"3b4b32ea-d6a2-41d6-a3f0-2cc8eea7182f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.4.3.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0e1a8817-dcd6-4ca8-9017-2fbda46c2be7/resourceGroups/Collins-Hackazon/providers/Microsoft.Storage/storageAccounts/hackazon001'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Premium_LRS",
                "tier": "Premium"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccount_name')]",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "scale": null,
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": false,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0e1a8817-dcd6-4ca8-9017-2fbda46c2be7/resourceGroups/Collins-Hackazon/providers/Microsoft.Network/networkSecurityGroups/SG-SSHandWeb/securityRules/HTTP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_SG_SSHandWeb_name'), '/', parameters('securityRules_HTTP_name'))]",
            "location": "[resourceGroup().location]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 110,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_SG_SSHandWeb_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0e1a8817-dcd6-4ca8-9017-2fbda46c2be7/resourceGroups/Collins-Hackazon/providers/Microsoft.Network/networkSecurityGroups/SG-SSHandWeb/securityRules/HTTPS'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_SG_SSHandWeb_name'), '/', parameters('securityRules_HTTPS_name'))]",
            "location": "[resourceGroup().location]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_SG_SSHandWeb_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0e1a8817-dcd6-4ca8-9017-2fbda46c2be7/resourceGroups/Collins-Hackazon/providers/Microsoft.Network/networkSecurityGroups/SG-SSHandWeb/securityRules/default-allow-ssh'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_SG_SSHandWeb_name'), '/', parameters('securityRules_default_allow_ssh_name'))]",
            "location": "[resourceGroup().location]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_SG_SSHandWeb_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0e1a8817-dcd6-4ca8-9017-2fbda46c2be7/resourceGroups/Collins-Hackazon/providers/Microsoft.Network/virtualNetworks/Collins-Hackazon-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_Collins_Hackazon_vnet_name'), '/', parameters('subnets_default_name'))]",
            "location": "[resourceGroup().location]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.4.3.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Collins_Hackazon_vnet_name'))]"
            ]
        }
    ]
}
